<resources>
    <string name="app_name">RoboCar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="alert_msg">Enter Valid Url</string>
    <string name="alertbox_title">Enter The Url</string>
    <string name="cancelbutton">Cancel</string>
    <string name="submitbutton">Submit</string>
    <string name="Pause">Pause</string>
    <string name="Play">Play</string>
    <string name="demomsg">Sound Detected!</string>
    <string name="demodate">29/12/2020 15:31:05</string>
    <string name="TODO">TODO</string>
    <string name="Home">Home</string>
    <string name="Notification">Notification</string>
    <string name="Onlinemode">Onmode</string>
    <string name="Profile">Profile</string>
    <string name="instructor">Click Play Button To Start Streaming and Controlling.</string>
    <string name="instructor_onmode">Click Home Button For Default Streaming Or Onmode Button For New Streaming.</string>
    <string name="Account">Account</string>
    <string name="Help">Help</string>
    <string name="Username_ip">UserName :</string>
    <string name="Email">Email :</string>
    <string name="Logout">Logout</string>
    <string name="Email_data">robocarhelp123@gmail.com</string>
    <string name="Login">Login</string>
    <string name="welcometxt">Welcome User</string>
    <string name="step">Step : 1</string>
    <string name="login_username">Enter Robocar IP</string>
    <string name="login_password">Enter Password</string>
    <string name="login_extratext">Login using Robocar IP and Password.</string>
    <string name="set_passcode_label">Set 4 digit Passcode</string>
    <string name="submit">Submit</string>
    <string name="Done">Done</string>
    <string name="setpasscodelabel">Set 4 digit Pin</string>
    <string name="setpasscodelabelconfirm">Confirm 4 digit Pin</string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>