<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context=".Loginpage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/toolbarbackground"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/segoeuibold"
            android:gravity="center_vertical"
            android:text="@string/welcometxt"
            android:textColor="@color/white"
            android:textSize="35sp"
            tools:ignore="NestedWeights" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/segoeuibold"
            android:text="@string/login_extratext"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@drawable/dialog_style"
        android:elevation="32dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/bottomnav_border"
            android:backgroundTint="@color/grey"
            android:drawableEnd="@drawable/profile"
            android:fontFamily="@font/segoeuibold"
            android:hint="@string/login_username"
            android:inputType="text"
            android:paddingStart="28dp"
            android:paddingEnd="20dp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/bottomnav_border"
            android:backgroundTint="@color/grey"
            android:drawableEnd="@drawable/lock"
            android:fontFamily="@font/segoeuibold"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:paddingStart="28dp"
            android:paddingEnd="20dp" />

        <EditText
            android:id="@+id/login_passcode"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/bottomnav_border"
            android:backgroundTint="@color/grey"
            android:drawableEnd="@drawable/pin"
            android:fontFamily="@font/segoeuibold"
            android:hint="@string/setpasscodelabel"
            android:maxLength="4"
            android:inputType="number"
            android:paddingStart="28dp"
            android:paddingEnd="20dp" />


        <Button
            android:id="@+id/login_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/bottomnav_border"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/segoeuibold"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/Login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </LinearLayout>
</LinearLayout>